--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,3 +1,32 @@
 {
-  "bookShelf": "Bookshelf"
+  "common": {
+    "appName": "Bookshelf"
+  },
+  "button": {
+    "cancel": "Cancel",
+    "copyTokenToClipboard": "Copy token to clipboard",
+    "create": "Create",
+    "createBookshelf": "Create your own Bookshelf",
+    "gotIt": "Got it!",
+    "openBookshelf": "Open your Bookshelf"
+  },
+  "home": {
+    "welcomeDescription": "Add books, build shelves, and never lose track of what you’re reading.",
+    "welcomeTagline": "Organize, track, and enjoy your personal library.",
+    "welcomeTitle": "All your books, in one place."
+  },
+  "modal": {
+    "createBookshelf": "Create new Bookshelf",
+    "descriptionOfBookshelf": "Description of your Bookshelf (optional)",
+    "descriptionPlaceholder": "What’s special about this bookshelf?",
+    "nameOfBookshelf": "Name of your Bookshelf",
+    "namePlaceholder": "e.g. My Favorite Reads",
+    "newBookshelfCreated": "Your Bookshelf Has Been Created",
+    "saveThisToken": "This edit token is required to update or delete this bookshelf. It will not be shown again! Please store it securely."
+  },
+  "toast": {
+    "anErrorOccurred": "An error occurred",
+    "tokenCopied": "Token copied to clipboard",
+    "tokenCopyFailed": "Failed to copy token to clipboard"
+  }
 }
