Implement token‑based bookshelf access, MyBookshelfContext, and My Bookshelf page
Backend:
- Added token‑based endpoints:
 - GET /api/v1/bookshelves/token/{token} – fetch bookshelf by edit token
 - GET /api/v1/bookshelves/token/{token}/books – fetch books for bookshelf by token
Frontend:
- Types
 - Moved bookshelf interfaces → /types/bookshelf
 - Created /types/book.ts defining Book interface
- API
 - Added new API functions: getBookshelfByToken(token) and getBooksInBookshelfByToken(token)
- Token Persistence
 - Added optional saving of editToken to localStorage using checkbox in ShowTokenModal
- Context
 - Created MyBookshelfContext and MyBookshelfProvider
 - Added useMyBookshelf hook for context access
 - Handles bookshelf, books, token state, and refresh logic
- Routing & Components
 - Added /my/bookshelf route for user’s editable bookshelf
 - Implemented MyBookshelf page with redirect guard (no token → home)

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -22,11 +22,16 @@
     "nameOfBookshelf": "Name of your Bookshelf",
     "namePlaceholder": "e.g. My Favorite Reads",
     "newBookshelfCreated": "Your Bookshelf Has Been Created",
-    "saveThisToken": "This edit token is required to update or delete this bookshelf. It will not be shown again! Please store it securely."
+    "rememberToken": "Remember this token on this device",
+    "saveTokenTitle": "Keep this token safe.",
+    "saveTokenPurpose": "You’ll need it to access, edit, or delete your bookshelf.",
+    "saveTokenInstruction": "It’s only shown once — save it somewhere secure."
   },
   "toast": {
     "anErrorOccurred": "An error occurred",
+    "failedToRefreshBookshelf": "Failed to refresh bookshelf",
     "tokenCopied": "Token copied to clipboard",
-    "tokenCopyFailed": "Failed to copy token to clipboard"
+    "tokenCopyFailed": "Failed to copy token to clipboard",
+    "tokenStored": "Your token has been stored on this device."
   }
 }
