Implement BookCard component
- Added responsive BookCard component with clean, hover-interactive design
- Displayed book status via color-coded badges (wishlist, reading, completed)
- Integrated favorite/not-favorite SVG icons with hover scaling animation
- Improved placeholder display for books without a cover image
- Ensured consistent grid layout compatibility in BookshelfView

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -49,6 +49,8 @@
     "invalidBookshelfPublicId": "Invalid bookshelf Public ID",
     "invalidTokenOrBookshelfNotFound": "Invalid token or bookshelf not found",
     "noTokenFound": "No token found.",
+    "publicIdCopied": "Public ID copied to clipboard",
+    "publicIdCopyFailed": "Failed to copy Public ID to clipboard",
     "tokenCopied": "Token copied to clipboard",
     "tokenCopyFailed": "Failed to copy token to clipboard",
     "tokenStored": "Your token has been stored on this device."
