Add structured BookPage for viewing detailed book information
Implemented a new BookPage component to display detailed book information in a clean, structured layout.
- Fetches book data either from local bookshelf context or via API (getBookById).
- Organized content into clear sections:
 - Basic information (title, author, description, metadata)
 - Reading details (status, progress, start/finish dates)
 - Personal stats (rating, read count, favorite)
 - Personal notes
- Added placeholder UI for missing cover images.
- Included responsive layout with grid sections, consistent typography, and section dividers.
- Supports view, edit, and create modes (currently focused on view mode).

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -3,12 +3,35 @@
     "appName": "Bookshelf",
     "bookshelfNotFound": "Bookshelf not found",
     "invalidBookshelfPublicId": "Invalid Bookshelf Public ID",
-    "loading": "Loading..."
-  },
-  "bookCard": {
+    "loading": "Loading...",
+    "no": "No",
     "placeholderQuestionMark": "?",
     "placeholderNoCover": "No Cover",
-    "placeholderAvailable": "Available"
+    "placeholderAvailable": "Available",
+    "unknown": "Unknown",
+    "yes": "Yes"
+  },
+  "bookPage": {
+    "description": "Description",
+    "favorite": "Favorite",
+    "finishedAt": "Finished At",
+    "genre": "Genre",
+    "isbn13": "ISBN-13",
+    "language": "Language",
+    "noDescription": "No description available.",
+    "noNotes": "No personal notes added.",
+    "pages": "Pages",
+    "pagesLowerCase": "pages",
+    "personalNotes": "Personal Notes",
+    "personalStats": "Personal Stats",
+    "progress": "Progress",
+    "published": "Published",
+    "publisher": "Publisher",
+    "rating": "Rating",
+    "readCount": "Read Count",
+    "readingDetails": "Reading Details",
+    "status": "Status",
+    "startedAt": "Started At"
   },
   "bookshelfView": {
     "books": "Books:",
@@ -53,6 +76,7 @@
   "toast": {
     "anErrorOccurred": "An error occurred",
     "bookshelfLoadedSuccessfully": "Bookshelf loaded successfully",
+    "failedToFetchBook": "Failed to fetch book",
     "failedToRefreshBookshelf": "Failed to refresh bookshelf",
     "invalidBookshelfPublicId": "Invalid bookshelf Public ID",
     "invalidTokenOrBookshelfNotFound": "Invalid token or bookshelf not found",
