--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -2,6 +2,8 @@
   "common": {
     "appName": "Bookshelf",
     "bookshelfNotFound": "Bookshelf not found",
+    "coverImageFor": "Cover image for",
+    "coverNotAvailable": "Cover not available",
     "invalidBookshelfPublicId": "Invalid Bookshelf Public ID",
     "loading": "Loading...",
     "no": "No",
@@ -39,16 +41,20 @@
   },
   "button": {
     "addBook": "Add Book",
+    "backToBookshelf": "Back to Bookshelf",
     "cancel": "Cancel",
     "copyPublicIdToClipboard": "Copy Public ID to clipboard",
     "copyTokenToClipboard": "Copy token to clipboard",
     "create": "Create",
     "createBookshelf": "Create your own Bookshelf",
     "deleteBookshelf": "Delete Bookshelf",
+    "delete": "Delete",
+    "edit": "Edit",
     "gotIt": "Got it!",
     "markAsFavorite": "Mark as Favorite",
     "open": "Open",
     "openMyBookshelf": "Open My Bookshelf",
+    "save": "Save",
     "unmarkAsFavorite": "Unmark as Favorite",
     "visitBookshelf": "Visit Bookshelf"
   },
@@ -81,7 +87,9 @@
     "invalidBookshelfPublicId": "Invalid bookshelf Public ID",
     "invalidTokenOrBookshelfNotFound": "Invalid token or bookshelf not found",
     "markedAsFavorite": "Marked as favorite:",
+    "noPermissionToEditBook": "You do not have permission to edit this book.",
     "noTokenFound": "No token found.",
+    "notLoggedInToCreateBook": "You must be logged in to create a book.",
     "publicIdCopied": "Public ID copied to clipboard",
     "publicIdCopyFailed": "Failed to copy Public ID to clipboard",
     "removedFromFavorites": "Removed from favorites:",
