Implement create and edit functionality with form validation and UI updates
Added full create and edit functionality across the interface.
- Introduced new form functionalities for Details component to handle both creating and editing items using a shared logic structure.
- Added dynamic form population for edit mode with pre-filled field values.
- Implemented input validation and error handling to ensure data integrity.
- Updated UI elements to provide clear distinction between create and edit actions.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -14,6 +14,7 @@
     "yes": "Yes"
   },
   "bookPage": {
+    "bookMetadata": "Book Metadata",
     "description": "Description",
     "favorite": "Favorite",
     "finishedAt": "Finished At",
@@ -23,7 +24,6 @@
     "noDescription": "No description available.",
     "noNotes": "No personal notes added.",
     "pages": "Pages",
-    "pagesLowerCase": "pages",
     "personalNotes": "Personal Notes",
     "personalStats": "Personal Stats",
     "progress": "Progress",
@@ -79,17 +79,36 @@
     "saveTokenPurpose": "You’ll need it to access, edit, or delete your bookshelf.",
     "saveTokenInstruction": "It’s only shown once — save it somewhere secure."
   },
+  "placeholders": {
+    "enterAuthorName": "Enter author name",
+    "enterDescription": "Enter description",
+    "enterIsbn13": "Enter ISBN-13",
+    "enterPages": "Enter number of pages",
+    "enterPersonalNotes": "Enter your personal notes here",
+    "enterProgress": "Enter reading progress in pages",
+    "enterPublisherName": "Enter publisher name",
+    "enterRating": "Enter rating (0-10)",
+    "enterReadCount": "Enter how many times you've read this book",
+    "enterTitle": "Enter book title"
+  },
   "toast": {
     "anErrorOccurred": "An error occurred",
+    "book": "Book",
     "bookshelfLoadedSuccessfully": "Bookshelf loaded successfully",
+    "createdSuccessfully": "created successfully",
+    "failedToCreateBook": "Failed to create book",
     "failedToFetchBook": "Failed to fetch book",
     "failedToRefreshBookshelf": "Failed to refresh bookshelf",
+    "failedToUpdateBook": "Failed to update book",
+    "failedToSaveBook": "Failed to save book",
+    "hasBeenUpdated": "has been updated",
     "invalidBookshelfPublicId": "Invalid bookshelf Public ID",
     "invalidTokenOrBookshelfNotFound": "Invalid token or bookshelf not found",
     "markedAsFavorite": "Marked as favorite:",
     "noPermissionToEditBook": "You do not have permission to edit this book.",
     "noTokenFound": "No token found.",
     "notLoggedInToCreateBook": "You must be logged in to create a book.",
+    "notLoggedInToSaveChanges": "You must be logged in to save changes.",
     "publicIdCopied": "Public ID copied to clipboard",
     "publicIdCopyFailed": "Failed to copy Public ID to clipboard",
     "removedFromFavorites": "Removed from favorites:",
