--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -43,6 +43,7 @@
     "addBook": "Add Book",
     "backToBookshelf": "Back to Bookshelf",
     "cancel": "Cancel",
+    "confirm": "Confirm",
     "copyPublicIdToClipboard": "Copy Public ID to clipboard",
     "copyTokenToClipboard": "Copy token to clipboard",
     "create": "Create",
@@ -64,6 +65,10 @@
     "welcomeTitle": "All your books, in one place."
   },
   "modal": {
+    "confirmationDeleteBookMessage": "Are you sure you want to delete this book? This action cannot be undone.",
+    "confirmationDeleteBookshelfMessage": "Are you sure you want to delete this bookshelf? This action cannot be undone and all books within it will be lost.",
+    "confirmationDeleteBookTitle": "Confirm Book Deletion",
+    "confirmationDeleteBookshelfTitle": "Confirm Bookshelf Deletion",
     "createBookshelf": "Create new Bookshelf",
     "descriptionOfBookshelf": "Description of your Bookshelf (optional)",
     "descriptionPlaceholder": "What’s special about this bookshelf?",
@@ -95,9 +100,15 @@
   "toast": {
     "anErrorOccurred": "An error occurred",
     "book": "Book",
+    "bookDeletedSuccessfully": "Book deleted successfully",
+    "bookshelfDeletedSuccessfully": "Bookshelf deleted successfully",
     "bookshelfLoadedSuccessfully": "Bookshelf loaded successfully",
     "createdSuccessfully": "created successfully",
+    "errorOccurredWhileDeletingBook": "An error occurred while deleting the book.",
+    "errorOccurredWhileDeletingBookshelf": "An error occurred while deleting the bookshelf.",
     "failedToCreateBook": "Failed to create book",
+    "failedToDeleteBook": "Failed to delete book. Please try again.",
+    "failedToDeleteBookshelf": "Failed to delete bookshelf. Please try again.",
     "failedToFetchBook": "Failed to fetch book",
     "failedToRefreshBookshelf": "Failed to refresh bookshelf",
     "failedToUpdateBook": "Failed to update book",
