Integrate Open Library search modal and add book import/update functionality
- Added SearchOpenLibraryModal component for searching and selecting books from the Open Library API.
- Integrated modal into bookshelf and book actions for importing metadata when creating or editing books.
- Implemented mergeOpenLibraryBook utility to merge Open Library data into existing book drafts.
- Added openlibrary.ts API module for querying book data via /search.json.
- Added typing (OpenLibraryDoc, OpenLibrarySearchBook) for Open Library API responses.
- Updated BookPageActions and BookshelfView to use the modal for both “Add” and “Update from Open Library” actions.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -41,6 +41,7 @@
   },
   "button": {
     "addBook": "Add Book",
+    "addFromOpenLibrary": "Add from Open Library",
     "backToBookshelf": "Back to Bookshelf",
     "cancel": "Cancel",
     "confirm": "Confirm",
@@ -56,7 +57,9 @@
     "open": "Open",
     "openMyBookshelf": "Open My Bookshelf",
     "save": "Save",
+    "search": "Search",
     "unmarkAsFavorite": "Unmark as Favorite",
+    "updateFromOpenLibrary": "Update from Open Library",
     "visitBookshelf": "Visit Bookshelf"
   },
   "home": {
@@ -96,6 +99,12 @@
     "enterReadCount": "Enter how many times you've read this book",
     "enterTitle": "Enter book title"
   },
+  "searchOpenLibrary": {
+    "firstPublished": "First published",
+    "searchPlaceholder": "Search by title, author, ISBN, etc.",
+    "title": "Search Open Library",
+    "unknownAuthor": "Unknown Author"
+  },
   "toast": {
     "anErrorOccurred": "An error occurred",
     "book": "Book",
@@ -120,6 +129,8 @@
     "noTokenFound": "No token found.",
     "notLoggedInToCreateBook": "You must be logged in to create a book.",
     "notLoggedInToSaveChanges": "You must be logged in to save changes.",
+    "openLibraryNoResults": "No results found in Open Library.",
+    "openLibrarySearchError": "Error searching Open Library. Please try again.",
     "publicIdCopied": "Public ID copied to clipboard",
     "publicIdCopyFailed": "Failed to copy Public ID to clipboard",
     "removedFromFavorites": "Removed from favorites:",
