--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -42,6 +42,7 @@
   "button": {
     "addBook": "Add Book",
     "addFromOpenLibrary": "Add from Open Library",
+    "back": "Back",
     "backToBookshelf": "Back to Bookshelf",
     "cancel": "Cancel",
     "confirm": "Confirm",
@@ -53,13 +54,14 @@
     "delete": "Delete",
     "edit": "Edit",
     "gotIt": "Got it!",
+    "importBook": "Import Book",
     "markAsFavorite": "Mark as Favorite",
     "open": "Open",
     "openMyBookshelf": "Open My Bookshelf",
     "save": "Save",
     "search": "Search",
     "unmarkAsFavorite": "Unmark as Favorite",
-    "updateFromOpenLibrary": "Update from Open Library",
+    "searchFromOpenLibrary": "Search from Open Library",
     "visitBookshelf": "Visit Bookshelf"
   },
   "home": {
@@ -100,8 +102,15 @@
     "enterTitle": "Enter book title"
   },
   "searchOpenLibrary": {
+    "confirmImportTitle": "Import this book from Open Library?",
     "firstPublished": "First published",
     "searchPlaceholder": "Search by title, author, ISBN, etc.",
+    "selectFieldsToImport": "Select fields to import",
+    "titleToggle": "Title",
+    "authorsToggle": "Authors",
+    "publishYearToggle": "Publish Year",
+    "descriptionToggle": "Description",
+    "coverUrlToggle": "Cover Image",
     "title": "Search Open Library",
     "unknownAuthor": "Unknown Author"
   },
@@ -129,6 +138,7 @@
     "noTokenFound": "No token found.",
     "notLoggedInToCreateBook": "You must be logged in to create a book.",
     "notLoggedInToSaveChanges": "You must be logged in to save changes.",
+    "openLibraryFetchBookError": "Error fetching book details from Open Library. Please try again.",
     "openLibraryNoResults": "No results found in Open Library.",
     "openLibrarySearchError": "Error searching Open Library. Please try again.",
     "publicIdCopied": "Public ID copied to clipboard",
