Refactor book form to utilize react-hook-form and zod
- Create schema for book form validation
- Refactor edit and create forms to use react-hook-form with Zod validation instead of useState
- Update Detail component to use react-hook-form's register
- Extract FavoriteToggle logic into its own component from Detail
- Update StarRating and FavoriteToggle components to use react-hook-form's Control

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -119,28 +119,24 @@
   },
   "toast": {
     "anErrorOccurred": "An error occurred",
-    "book": "Book",
+    "bookCreatedSuccessfully": "Book created successfully",
     "bookDeletedSuccessfully": "Book deleted successfully",
+    "bookHasBeenUpdated": "Book has been updated",
     "bookshelfDeletedSuccessfully": "Bookshelf deleted successfully",
     "bookshelfLoadedSuccessfully": "Bookshelf loaded successfully",
-    "createdSuccessfully": "created successfully",
     "errorOccurredWhileDeletingBook": "An error occurred while deleting the book.",
     "errorOccurredWhileDeletingBookshelf": "An error occurred while deleting the bookshelf.",
-    "failedToCreateBook": "Failed to create book",
     "failedToDeleteBook": "Failed to delete book. Please try again.",
     "failedToDeleteBookshelf": "Failed to delete bookshelf. Please try again.",
     "failedToFetchBook": "Failed to fetch book",
     "failedToRefreshBookshelf": "Failed to refresh bookshelf",
-    "failedToUpdateBook": "Failed to update book",
-    "failedToSaveBook": "Failed to save book",
-    "hasBeenUpdated": "has been updated",
+    "failedToSaveBook": "Failed to save book. Please try again.",
     "invalidBookshelfPublicId": "Invalid bookshelf Public ID",
     "invalidTokenOrBookshelfNotFound": "Invalid token or bookshelf not found",
     "markedAsFavorite": "Marked as favorite:",
     "noPermissionToEditBook": "You do not have permission to edit this book.",
     "noTokenFound": "No token found.",
     "notLoggedInToCreateBook": "You must be logged in to create a book.",
-    "notLoggedInToSaveChanges": "You must be logged in to save changes.",
     "openLibraryFetchBookError": "Error fetching book details from Open Library. Please try again.",
     "openLibraryNoResults": "No results found in Open Library.",
     "openLibrarySearchError": "Error searching Open Library. Please try again.",
