Implement bookshelf filter, sort, and search toolbar
- Added a new BookshelfToolbar component to manage filtering, sorting, and searching of books.
- Supports filtering by genre, language, and reading status.
- Added smart search input for title, author, ISBN, and publisher.
- Implemented sorting options for favorites, rating, and finished date.
- Added 'Clear Filters' action for quick reset of all filters.
- Updated BookshelfView to integrate toolbar and apply filters via useMemo.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -36,9 +36,56 @@
     "status": "Status",
     "startedAt": "Started At"
   },
+  "bookshelfToolbar": {
+    "allGenres": "All Genres",
+    "allLanguages": "All Languages",
+    "allStatuses": "All Statuses",
+    "clearFilters": "Clear Filters",
+    "genreAll": "All Genres",
+    "genreBiography": "Biography",
+    "genreFantasy": "Fantasy",
+    "genreFiction": "Fiction",
+    "genreHistory": "History",
+    "genreMystery": "Mystery",
+    "genreNonFiction": "Non-Fiction",
+    "genreOther": "Other",
+    "genreRomance": "Romance",
+    "genreScience": "Science",
+    "genreSciFi": "Science Fiction",
+    "genreTechnology": "Technology",
+    "genreThriller": "Thriller",
+    "genreUnknown": "Unknown Genre",
+    "languageAll": "All Languages",
+    "languageArabic": "Arabic",
+    "languageChinese": "Chinese",
+    "languageEnglish": "English",
+    "languageFrench": "French",
+    "languageFinnish": "Finnish",
+    "languageGerman": "German",
+    "languageHindi": "Hindi",
+    "languageItalian": "Italian",
+    "languageJapanese": "Japanese",
+    "languageOther": "Other",
+    "languagePortuguese": "Portuguese",
+    "languageRussian": "Russian",
+    "languageSpanish": "Spanish",
+    "languageSwedish": "Swedish",
+    "languageUnknown": "Unknown Language",
+    "searchPlaceholder": "Search by title, author, or ISBN...",
+    "sortBy": "Sort by:",
+    "sortByRatingAsc": "Rating (Low to High)",
+    "sortByRatingDesc": "Rating (High to Low)",
+    "sortFavoritesFirst": "Favorites First",
+    "sortFinishedAtAsc": "Date Finished (Oldest)",
+    "sortFinishedAtDesc": "Date Finished (Newest)",
+    "statusCompleted": "Completed",
+    "statusReading": "Reading",
+    "statusWishlist": "Wishlist"
+  },
   "bookshelfView": {
     "books": "Books:",
-    "noBooks": "No books in this bookshelf. Start adding some!"
+    "noBooks": "No books in this bookshelf. Start adding some!",
+    "noBooksMatchFilters": "No books match the current filters."
   },
   "button": {
     "addBook": "Add Book",
