Migrate BookshelfView and subcomponents to ShadCN UI components
- Rebuilt BookshelfView, BookshelfHeader, BookshelfToolbar, and BookCard to use ShadCN UI primitives (Card, Button, Input, Select, Badge, etc.)
- Unified layout and visual style using shared theme tokens
- Added responsive auto-fit grid with consistent BookCard sizing (max-w-[20rem])
- Improved accessibility and visual consistency across components
- Established foundation for future ShadCN-based UI refactors throughout the app

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -41,6 +41,7 @@
     "allLanguages": "All Languages",
     "allStatuses": "All Statuses",
     "clearFilters": "Clear Filters",
+    "filtersAndSorting": "Filters & Sorting",
     "genreAll": "All Genres",
     "genreBiography": "Biography",
     "genreFantasy": "Fantasy",
