Integrate ShadCN components and add custom DatePicker to BookPage
- Added ShadCN-based UI components: calendar, form, label, popover, and textarea.
- Replaced existing form and input logic with standardized ShadCN components for consistency and accessibility.
- Implemented a custom DatePicker component using Popover, Calendar, and Button from ShadCN UI.
- Added support for clearing selected dates and properly formatting local ISO dates.
- Updated related book form components to align with new ShadCN architecture.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -2,12 +2,14 @@
   "common": {
     "appName": "Bookshelf",
     "bookshelfNotFound": "Bookshelf not found",
+    "clear": "Clear",
     "close": "Close",
     "coverImageFor": "Cover image for",
     "coverNotProvided": "Cover not provided",
     "invalidBookshelfPublicId": "Invalid Bookshelf Public ID",
     "loading": "Loading...",
     "no": "No",
+    "pickDate": "Pick a date",
     "placeholderQuestionMark": "?",
     "placeholderNoCover": "No Cover",
     "placeholderProvided": "Provided",
