--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -101,12 +101,14 @@
     "copyTokenToClipboard": "Copy token to clipboard",
     "create": "Create",
     "createBookshelf": "Create your own Bookshelf",
-    "deleteBookshelf": "Delete Bookshelf",
     "delete": "Delete",
+    "deleteBookshelf": "Delete Bookshelf",
     "edit": "Edit",
     "gotIt": "Got it!",
     "importBook": "Import Book",
+    "forgetThisBookshelf": "Forget This Bookshelf",
     "markAsFavorite": "Mark as Favorite",
+    "myBookshelf": "My Bookshelf",
     "open": "Open",
     "openMyBookshelf": "Open My Bookshelf",
     "save": "Save",
@@ -184,6 +186,7 @@
     "invalidBookshelfPublicId": "Invalid bookshelf Public ID",
     "invalidTokenOrBookshelfNotFound": "Invalid token or bookshelf not found",
     "markedAsFavorite": "Marked as favorite:",
+    "noBookshelfToDelete": "No bookshelf to delete.",
     "noPermissionToEditBook": "You do not have permission to edit this book.",
     "noTokenFound": "No token found.",
     "notLoggedInToCreateBook": "You must be logged in to create a book.",
