Migrate modal and open library components to ShadCN UI
- Replaced custom modal implementations with ShadCN Dialog for accessibility and consistency
- Updated all inputs, buttons, textareas, and form fields to ShadCN components
- Added new ShadCN components: Checkbox, Dialog, and supporting UI primitives
- Refactored CreateBookshelfModal, EnterTokenModal, EnterPublicIdModal, ShowTokenModal, and ConfirmationModal
- Refactored OpenLibrary modals (SearchList, BookDetails, SearchOpenLibraryModal) for full design system alignment
- Improved a11y, focus management, and keyboard interactions across modals

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -128,10 +128,14 @@
     "confirmationDeleteBookTitle": "Confirm Book Deletion",
     "confirmationDeleteBookshelfTitle": "Confirm Bookshelf Deletion",
     "createBookshelf": "Create new Bookshelf",
+    "createBookshelfDescription": "Start your personal library by creating a new bookshelf.",
     "descriptionOfBookshelf": "Description of your Bookshelf (optional)",
     "descriptionPlaceholder": "What’s special about this bookshelf?",
     "enterEditToken": "Enter your bookshelf token",
+    "enterEditTokenDescription": "Paste the secret token you received when creating your bookshelf to open it for editing.",
     "enterPublicIdToVisit": "Enter the Public ID to visit a Bookshelf",
+    "enterPublicIdToVisitDescriptionStart": "Each bookshelf has a unique Public ID.",
+    "enterPublicIdToVisitDescriptionEnd": "Paste one below to see what’s inside.",
     "nameOfBookshelf": "Name of your Bookshelf",
     "namePlaceholder": "e.g. My Favorite Reads",
     "newBookshelfCreated": "Your Bookshelf Has Been Created",
@@ -157,7 +161,9 @@
   "searchOpenLibrary": {
     "authorsToggle": "Authors",
     "confirmImportTitle": "Import this book from Open Library?",
+    "confirmImportDescription": "Select the fields you want to import and click 'Import Book' to add it to your bookshelf.",
     "coverUrlToggle": "Cover Image",
+    "description": "Search and import book details from Open Library to quickly add or update books to your bookshelf.",
     "descriptionToggle": "Description",
     "firstPublished": "First published",
     "loadingBookDetails": "Loading book details...",
