Add import/export books functionality with new modals and API endpoints to frontend
- Added two new API helper methods in api/bookshelves.ts:
  - exportBooksFromBookshelf(): fetches portable book data for export
  - importBooksToBookshelf(): posts imported portable books to a bookshelf
- Implemented new modals:
  - ExportBooksModal: displays export data as formatted JSON, allows copy or download
  - ImportBooksModal: provides JSON textarea for importing books into the bookshelf
- Integrated modal types into ModalRoot and context
- Added related UI interactions in Topbar/BookshelfHeader for opening import/export modals

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "appName": "Bookshelf",
+    "books": "books",
     "bookshelfNotFound": "Bookshelf not found",
     "clear": "Clear",
     "close": "Close",
@@ -96,16 +97,21 @@
     "back": "Back",
     "backToBookshelf": "Back to Bookshelf",
     "cancel": "Cancel",
+    "close": "Close",
     "confirm": "Confirm",
+    "copyExportDataToClipboard": "Copy export data to clipboard",
     "copyPublicIdToClipboard": "Copy Public ID to clipboard",
     "copyTokenToClipboard": "Copy token to clipboard",
     "create": "Create",
     "createBookshelf": "Create your own Bookshelf",
     "delete": "Delete",
     "deleteBookshelf": "Delete Bookshelf",
+    "downloadExportData": "Download export data",
     "edit": "Edit",
+    "exportBooks": "Export Books",
     "gotIt": "Got it!",
     "importBook": "Import Book",
+    "importBooks": "Import Books",
     "forgetThisBookshelf": "Forget This Bookshelf",
     "markAsFavorite": "Mark as Favorite",
     "myBookshelf": "My Bookshelf",
@@ -136,6 +142,10 @@
     "enterPublicIdToVisit": "Enter the Public ID to visit a Bookshelf",
     "enterPublicIdToVisitDescriptionStart": "Each bookshelf has a unique Public ID.",
     "enterPublicIdToVisitDescriptionEnd": "Paste one below to see what’s inside.",
+    "exportBooksDescription": "You can export the list of books in this bookshelf as a JSON for backup or sharing purposes.",
+    "exportBooksTitle": "Export Books from Bookshelf",
+    "importBooksTitle": "Import Books into Your Bookshelf",
+    "importBooksDescription": "You can import a list of books into your bookshelf from a JSON.",
     "nameOfBookshelf": "Name of your Bookshelf",
     "namePlaceholder": "e.g. My Favorite Reads",
     "newBookshelfCreated": "Your Bookshelf Has Been Created",
@@ -156,7 +166,8 @@
     "enterProgress": "Enter reading progress in pages",
     "enterPublisherName": "Enter publisher name",
     "enterReadCount": "Enter how many times you've read this book",
-    "enterTitle": "Enter book title"
+    "enterTitle": "Enter book title",
+    "pasteExportedJsonHere": "Paste exported JSON data here"
   },
   "searchOpenLibrary": {
     "authorsToggle": "Authors",
@@ -180,21 +191,33 @@
     "bookCreatedSuccessfully": "Book created successfully",
     "bookDeletedSuccessfully": "Book deleted successfully",
     "bookHasBeenUpdated": "Book has been updated",
+    "booksImportedSuccessfully": "Books imported successfully",
     "bookshelfDeletedSuccessfully": "Bookshelf deleted successfully",
     "bookshelfLoadedSuccessfully": "Bookshelf loaded successfully",
     "errorOccurredWhileDeletingBook": "An error occurred while deleting the book.",
     "errorOccurredWhileDeletingBookshelf": "An error occurred while deleting the bookshelf.",
+    "errorOccurredWhileExportingBooks": "An error occurred while exporting books.",
+    "errorOccurredWhileImportingBooks": "An error occurred while importing books.",
+    "exportDataCopiedSuccessfully": "Export data copied successfully",
+    "exportDataCopyFailed": "Failed to copy export data to clipboard",
+    "exportDataDownloadFailed": "Failed to download export data",
+    "exportDataDownloadedSuccessfully": "Export data downloaded successfully",
     "failedToDeleteBook": "Failed to delete book. Please try again.",
     "failedToDeleteBookshelf": "Failed to delete bookshelf. Please try again.",
     "failedToFetchBook": "Failed to fetch book",
     "failedToRefreshBookshelf": "Failed to refresh bookshelf",
     "failedToSaveBook": "Failed to save book. Please try again.",
+    "importMissingBookshelfOrToken": "Import failed: Missing bookshelf or token.",
     "invalidBookshelfPublicId": "Invalid bookshelf Public ID",
+    "invalidJsonFormat": "Invalid JSON format",
     "invalidTokenOrBookshelfNotFound": "Invalid token or bookshelf not found",
     "markedAsFavorite": "Marked as favorite:",
     "noBookshelfToDelete": "No bookshelf to delete.",
     "noPermissionToEditBook": "You do not have permission to edit this book.",
     "noTokenFound": "No token found.",
+    "nothingToCopy": "Nothing to copy.",
+    "nothingToDownload": "Nothing to download.",
+    "nothingToImport": "Nothing to import.",
     "notLoggedInToCreateBook": "You must be logged in to create a book.",
     "openLibraryFetchBookError": "Error fetching book details from Open Library. Please try again.",
     "openLibraryNoResults": "No results found in Open Library.",
