Redesign landing into multi‑section, interactive showcase + demo
Refactor Home into a clear 5‑section flow:
- Hero: refined headline/subcopy and CTAs (Create, Visit, Open/My Token)
- DemoBookshelf: early “try it now” CTA using VITE_DEMO_BOOKSHELF_PUBLIC_ID
- BookCardShowcase: marquee of BookCards (read‑only) with lightweight copy
  - Introduce Marquee utility for smooth, pausable horizontal scroll
- DetailShowcase: framed book details preview image + key points
- FeaturesGrid: concise capability cards (search, progress, ratings, export/import, sharing, privacy)
- FinalCTASection: closing conversion band before GitHub
- GitHubSection: repo CTA
Backend:
- Add DemoBookshelfSeeder to seed a read‑only demo shelf with sample books
- Add BookshelfService.createBookshelfWithPublicId(publicId, name, description)
to create shelves with a fixed publicId (used by the demo)
miscellanious:
- Expose createdAt and updatedAt in Book DTO responses
- Add prop to BookCard to disable interactivity
- Enhance accessability
- Default sort BookCards in BookshelfView to show latest updated first
- Add logo to Topbar
- Add Github repo url and demo bookshelf publicId to .env.example

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -110,6 +110,7 @@
     "edit": "Edit",
     "exportBooks": "Export Books",
     "gotIt": "Got it!",
+    "iHaveAToken": "I have a token",
     "importBook": "Import Book",
     "importBooks": "Import Books",
     "forgetThisBookshelf": "Forget This Bookshelf",
@@ -121,12 +122,45 @@
     "search": "Search",
     "unmarkAsFavorite": "Unmark as Favorite",
     "searchFromOpenLibrary": "Search from Open Library",
+    "viewDemoBookshelf": "View Demo Bookshelf",
+    "viewOnGitHub": "View on GitHub",
     "visitBookshelf": "Visit Bookshelf"
   },
   "home": {
-    "welcomeDescription": "Add books, build shelves, and never lose track of what you’re reading.",
-    "welcomeTagline": "Organize, track, and enjoy your personal library.",
-    "welcomeTitle": "All your books, in one place."
+    "bookCardShowcaseFilter": "Filter and sort by favorites, status, rating, etc.",
+    "bookCardShowcaseFullDetails": "Open a card to see complete details.",
+    "bookCardShowcaseImport": "Import from Open Library in seconds.",
+    "bookCardShowcaseSubtitle": "Favorites, statuses, ratings — browse at a glance.",
+    "bookCardShowcaseTitle": "Your digital bookshelf, in one place",
+    "demoBookshelfDescription": "Take a quick look around a preloaded, read‑only bookshelf. No sign‑in or setup required.",
+    "demoBookshelfTitle": "Explore a live demo bookshelf to see how it works.",
+    "detailPointMetadata": "Keep publishers, ISBN‑13, language, and genre tidy.",
+    "detailPointNotes": "Add personal notes and highlights for later.",
+    "detailPointProgress": "Track reading progress, start/finish dates, and rereads.",
+    "detailPointRatings": "Rate out of five stars and mark favorites.",
+    "detailShowcaseTitle": "All about your books, at a glance",
+    "detailShowcaseSubtitle": "Pages, progress, rereads, ratings, notes, and more. Edit anytime.",
+    "featuresGridBookOpenDescription": "Pages, dates, counts.",
+    "featuresGridBookOpenTitle": "Progress & rereads",
+    "featuresGridImportDescription": "Backups and migration.",
+    "featuresGridImportTitle": "Export / import JSON",
+    "featuresGridSearchTitle": "Open Library search",
+    "featuresGridSearchDescription": "Add books in seconds.",
+    "featuresGridShareDescription": "Easy to share, safe to edit.",
+    "featuresGridShareTitle": "Public ID sharing",
+    "featuresGridShieldDescription": "No accounts required.",
+    "featuresGridShieldTitle": "Edit-token privacy",
+    "featuresGridStarDescription": "Quick reactions that matter.",
+    "featuresGridStarTitle": "Ratings & favorites",
+    "featuresGridSubtitle": "Fast to start, powerful when you need it.",
+    "featuresGridTitle": "Do more with your bookshelf",
+    "finalCtaSubtitle": "Start now and organize your library in minutes.",
+    "finalCtaTitle": "Ready to build your first bookshelf?",
+    "githubSectionDescription": "Star the repo, follow the roadmap, or contribute features.",
+    "githubSectionTitle": "Open source friendly",
+    "heroDescription": "Manage your reading, import from Open Library, track progress and ratings, and share your reading journey with others. No account needed!",
+    "heroLearnMore": "Learn more",
+    "heroTagline": "All your books, beautifully organized."
   },
   "modal": {
     "confirmationDeleteBookMessage": "Are you sure you want to delete this book? This action cannot be undone.",
