--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -40,6 +40,7 @@
     "startedAt": "Started At"
   },
   "bookshelfToolbar": {
+    "yearFinished": "Year Finished",
     "allGenres": "All Genres",
     "allLanguages": "All Languages",
     "allStatuses": "All Statuses",
