Allow resetting filter in the dropdown
Include entry as the first item in the dropdown that resets the filter

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -41,6 +41,7 @@
   },
   "bookshelfToolbar": {
     "yearFinished": "Year Finished",
+    "allYears": "All Years",
     "allGenres": "All Genres",
     "allLanguages": "All Languages",
     "allStatuses": "All Statuses",
@@ -78,6 +79,7 @@
     "languageUnknown": "Unknown Language",
     "searchPlaceholder": "Search by title, author, or ISBN...",
     "sortBy": "Sort by:",
+    "noSorting": "No Sorting",
     "sortByRatingAsc": "Rating (Low to High)",
     "sortByRatingDesc": "Rating (High to Low)",
     "sortFavoritesFirst": "Favorites First",
