Add ShadCN loading spinner
- Install ShadCN spinner and replace all existing loading states with it
- Add isLoading state to MyBookshelfContext and display spinner when accessing the bookshelf from context

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -252,6 +252,7 @@
     "noBookshelfToDelete": "No bookshelf to delete.",
     "noPermissionToEditBook": "You do not have permission to edit this book.",
     "noTokenFound": "No token found.",
+    "noBookshelfFound": "No bookshelf found.",
     "nothingToCopy": "Nothing to copy.",
     "nothingToDownload": "Nothing to download.",
     "nothingToImport": "Nothing to import.",
